--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-three/drei": "^9.56.24",
     "@react-three/fiber": "^8.11.1",
     "framer-motion": "^9.0.7",
+    "gsap": "^3.13.0",
+    "lenis": "^1.3.11",
     "maath": "^0.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
